# rushomon

./: .dev.vars.example  .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  FIX.md  Makefile  PHASE2.5_STATUS.md  PHASE2_STATUS.md  README.md  SECURITY.md  SECURITY_LOGGING_GUIDELINES.md  TESTING_QUICKSTART.md  TEST_COVERAGE_REPORT.md  TEST_FIXES_COMPLETE.md  TEST_FIX_PART2.md  TEST_FIX_SUMMARY.md  build.rs  wrangler.example.toml  wrangler.toml
.github/: dependabot.yml
.github/workflows/: README.md  audit.yml  check-openapi.yml  cleanup-ephemeral.yml  deploy-docs-production.yml  deploy-docs-staging.yml  deploy-ephemeral.yml  deploy-production.yml  deploy-staging.yml  pull-closed-event.json  test-production-smoke.yml  test.yml
config/: setup.example.yaml
docs/: SELF_HOSTING.md  VERSIONING.md
docs-site/: .gitignore  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  versions.json  wrangler.docs.example.toml
docs-site/docs/: handle-accept-invite.StatusCodes.json  handle-accept-invite.api.mdx  handle-admin-block-destination.api.mdx  handle-admin-delete-api-key.api.mdx  handle-admin-delete-link.api.mdx  handle-admin-delete-user.StatusCodes.json  handle-admin-delete-user.api.mdx  handle-admin-get-billing-account.api.mdx  handle-admin-get-blacklist.api.mdx  handle-admin-get-pending-reports-count.api.mdx  handle-admin-get-report.ParamsDetails.json  handle-admin-get-report.api.mdx  handle-admin-get-reports.ParamsDetails.json  handle-admin-get-reports.api.mdx  handle-admin-get-settings.api.mdx  handle-admin-get-user.StatusCodes.json  handle-admin-get-user.api.mdx  handle-admin-list-api-keys.ParamsDetails.json  handle-admin-list-api-keys.api.mdx  handle-admin-list-billing-accounts.ParamsDetails.json  handle-admin-list-billing-accounts.api.mdx  handle-admin-list-discounts.api.mdx  handle-admin-list-links.ParamsDetails.json  handle-admin-list-links.api.mdx  handle-admin-list-products.api.mdx  handle-admin-list-users.ParamsDetails.json  handle-admin-list-users.api.mdx  handle-admin-reactivate-api-key.ParamsDetails.json  handle-admin-reactivate-api-key.api.mdx  handle-admin-remove-blacklist.ParamsDetails.json  handle-admin-remove-blacklist.api.mdx  handle-admin-reset-billing-account.api.mdx  handle-admin-reset-monthly-counter.ParamsDetails.json  handle-admin-reset-monthly-counter.api.mdx  handle-admin-restore-api-key.api.mdx  handle-admin-revoke-api-key.api.mdx  handle-admin-save-products.api.mdx  handle-admin-suspend-user.api.mdx  handle-admin-sync-link-kv.api.mdx  handle-admin-sync-products.StatusCodes.json  (+89 more)
docs-site/plugins/: webpack-node-fallback.js
docs-site/scripts/: configure-versions.mjs
docs-site/versioned_sidebars/: version-0.10.0-sidebars.json  version-0.11.2-sidebars.json  version-0.6.2-sidebars.json  version-0.7.0-sidebars.json
docs/openapi/: main.json  v0.11.0.json  v0.11.1.json  v0.11.2.json  v0.6.2.json  v0.7.0.json  v0.8.0.json  v0.9.0.json
frontend/: .env.example  .prettierignore  .prettierrc  README.md  eslint.config.js  package-lock.json  package.json  postcss.config.js  svelte.config.js  tailwind.config.js  vite.config.ts
frontend/scripts/: generate-sitemap.js  inline-critical-css.js
frontend/src/: app.css  app.d.ts
frontend/static/: robots-minimal.txt  robots.txt  sitemap-index.xml
migrations/: 0001_initial_schema.sql  0002_strict_tables.sql  0003_add_link_status.sql  0004_settings.sql  0005_org_tier.sql  0006_monthly_counters.sql  0007_user_suspension.sql  0008_destination_blacklist.sql  0009_link_reports.sql  0010_link_tags.sql  0011_org_members.sql  0012_billing_accounts.sql  0013_fix_monthly_counters_unique.sql  0014_drop_org_tier.sql  0015_subscriptions.sql  0016_polar_migration.sql  0017_subscription_pricing.sql  0018_cached_products.sql  0019_fix_org_dropdown.sql  0020_query_params.sql  0021_org_logo.sql  0022_unique_customer_id.sql  0023_subscription_pending_cancellation.sql  0024_add_ends_at.sql  0025_processed_webhooks.sql  0026_api_keys.sql  0027_redirect_type.sql  0028_api_keys_revoke.sql  0028_min_code_length_setting.sql  0029_device_routing.sql  0030_custom_domains.sql  0031_ssl_status.sql  0032_link_custom_domain.sql  0033_notification_preferences.sql  0034_api_key_orgs.sql  0035_org_members_role_constraint.sql  0036_pending_actions.sql  0037_last_login.sql  0038_tags_table.sql  0039_account_deletion.sql  (+4 more)
repo-config/: README.md  eslint.config.js
repo-config/config/: default.sh  user.sh.example
repo-config/hooks/: pre-commit
repo-config/scripts/: setup.sh
scripts/: README.md  backup.sh  clear-test-db.sh  generate-openapi.sh  restore.sh  run-integration-tests.sh  setup.sh  start-local-environment.sh
scripts/lib/: cloudflare.sh  common.sh  deployment.sh  oauth.sh  validation.sh
src/: lib.rs  openapi.rs  router.rs  test_format.rs
src/api/: analytics.rs  billing.rs  keys.rs  links.rs  (+6 more)
tests/: README.md  account_deletion_test.rs  admin_deletion_test.rs  admin_test.rs  analytics_org_test.rs  analytics_test.rs  api_keys_test.rs  billing_cron_test.rs  billing_flow_test.rs  billing_test.rs  billing_transfer_test.rs  billing_webhook_test.rs  blacklist_test.rs  google_oauth_test.rs  links_test.rs  notifications_test.rs  oauth_email_conflict_test.rs  org_domains_test.rs  orgs_test.rs  redirect_test.rs  run_integration_tests.sh  search_filter_test.rs  settings_test.rs  tag_limit_test.rs  tags_test.rs  tier_limits_test.rs  validation_test.rs
(+667 files in other folders)
