[package]
name = "rushomon"
version = "0.2.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
worker = { version = "0.7.4", features = ["d1"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
web-sys = { version = "0.3", features = ["Window", "Request", "RequestInit", "Response", "Headers", "RequestMode"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde", "js"] }
url = "2.5"
console_error_panic_hook = "0.1"
getrandom = { version = "0.4", features = ["wasm_js"] }
rand = "0.10.0"
wasm-bindgen-futures = "0.4"
jwt-compact = { version = "0.8.0", default-features = false, features = ["clock"] }
hmac = "0.12"
sha2 = "0.10"
chrono = { version = "0.4", features = ["wasmbind"] }
js-sys = "0.3"
subtle = "2.6"
regex = "1.11"
urlencoding = "2.1"

[build-dependencies]
toml = "0.9.8"
serde_json = "1.0"

[dev-dependencies]
reqwest = { version = "0.13.1", features = ["json"] }
tokio = { version = "1", features = ["full", "test-util"] }
axum = "0.8"

[[bin]]
name = "mock_oauth_server"
path = "src/bin/mock_oauth_server.rs"
required-features = ["test-utils"]

[features]
default = []
test-utils = ["dep:axum", "dep:tokio"]

[dependencies.axum]
version = "0.8"
optional = true

[dependencies.tokio]
version = "1"
features = ["full"]
optional = true

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1

[workspace.lints.clippy]
# Enforce secure logging practices
all = "warn"
# Custom rule: forbid logging sensitive user data directly
# This should be enforced via code review and custom lint rules
pedantic = "warn"
nursery = "warn"

# Specific rules for security
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
unimplemented = "warn"
todo = "warn"
